fix: code snippets overflow styling (#4)

--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -82,7 +82,7 @@ pre {
     padding: 0 !important;
     margin: 0 !important;
     border-radius: 2px;
-    overflow-x: scroll;
+    overflow-x: auto;
     width: 100%;
     max-width: 100vw !important;
     box-sizing: border-box;
@@ -109,7 +109,6 @@ code {
     border-radius: 2px;
     font-weight: bold;
     display: inline-block;
-    overflow-x: scroll;
     margin-bottom: -4px;
     box-sizing: border-box;
     background-clip: padding-box;
